# SDSGC-information-tool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
data/: acquisition.csv  acquisition.txt  draws.csv  draws.txt  heroes.csv  heroes.txt  owned.txt
src/: AddOwned.cpp  AddOwned.h  Conditions.cpp  Conditions.h  Filter.cpp  Filter.h  Hero.cpp  Hero.h  Heroes.cpp  Heroes.h  Menu.cpp  Menu.h  Project.aps  Project.cpp  Project.h  Project.sln  Project.vcxproj  Project.vcxproj.filters  Utilities.cpp  Utilities.h  Utilitiesig.cpp  Utilitiesig.h  main.cpp
src/Project/x64/Debug/: Project.exe.recipe  vc143.idb
src/Project/x64/Debug/Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project.lastbuildstate  link.command.1.tlog  link.read.2.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
